bt-350: * fixed layout problems and project links validation

--- a/frontend/src/bundles/common/components/select/styles.module.scss
+++ b/frontend/src/bundles/common/components/select/styles.module.scss
@@ -11,7 +11,7 @@
 
 .container .input {
     height: 38px;
-    padding: 10px 7px 12px 14px;
+    padding: 10px 7px 10px 14px;
     color: var(--steel-gray);
     font-weight: var(--font-weight-regular);
     border: 1px solid var(--botticelli);
@@ -22,7 +22,12 @@
 }
 
 .placeholder {
+    padding: 0;
     color: var(--nepal);
+}
+
+.container > div > div {
+    padding: 0;
 }
 
 .option {
